add open telemetry